[tool.poetry]
name = "renamer"
version = "0.1.0"
description = "Rename downloaded files from 10convert.com"
authors = ["Reinier Hernández <sasuke.reinier@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
